# ProtonVision

./: .replit  app.py  main.py  pyproject.toml  replit.md
assets/: styles.py
config/: settings.py
gui/: config_panel.py  dashboard.py  main_window.py  widgets.py
modules/: data_loader.py  differential_privacy.py  privacy_enhancement.py  risk_assessment.py  statistical_disclosure.py  synthetic_data.py  utility_measurement.py
reports/: report_generator.py
reports/templates/: report_template.html
temp/: Petty Cash - Format.xls  ai_generated_form_responses.csv  database-export-2025-07-21.json
utils/: attack_simulation.py  database.py  logger.py  privacy_metrics.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: help.html  index.html
